objects/Vosf_Related_Question__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indentity__c</fullName>
        <label>Indentity</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>Vosf_Question__c</referenceTo>
        <relationshipLabel>Related Questions</relationshipLabel>
        <relationshipName>Related_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Question_Column__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Question Column</label>
        <referenceTo>Vosf_Question_Column__c</referenceTo>
        <relationshipLabel>Related Questions</relationshipLabel>
        <relationshipName>Related_Questions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Question</label>
        <referenceTo>Vosf_Question__c</referenceTo>
        <relationshipLabel>Related Questions (Related Question)</relationshipLabel>
        <relationshipName>Related_Questions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Related Question</label>
    <nameField>
        <displayFormat>RQ-{0000}</displayFormat>
        <label>Vosf_Related Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>